--- a/firebase.json
+++ b/firebase.json
@@ -9,8 +9,9 @@
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+      "npm --prefix \"%RESOURCE_DIR%\" run build"
+    ],
+    "source": "functions"
   },
   "hosting": {
     "public": "public",
@@ -18,12 +19,6 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "storage": {
