--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "importHelpers": true,
     "target": "es5",
     "typeRoots": [
-      "node_modules/@types"
+      "./functions/node_modules/@types"
+      
     ],
     "lib": [
       "es2018",
